test/success/success01.lsp
(r 'A 'B '(< m))
(r 'B 'C '(m o d))
(r 'C 'A '(m < > = mi))
(r_exist 'A '(B C) '(o d di));  - hier wird der Existenzquantor eingesetzt
(r_exist '(A B) '(B C) '(o))
