test/fail/fail05.lsp
(r 'A 'B '(<))
(r 'B 'C '(< =))
(r 'A 'C '(>))
